<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_note"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_note"
        android:shortcutShortLabel="@string/shortcut_quick_note_short"
        android:shortcutLongLabel="@string/shortcut_quick_note_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="kardleaf://new?root=1" />
    </shortcut>

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="kardleaf://search" />
    </shortcut>

    <shortcut
        android:shortcutId="add_widget"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_widget"
        android:shortcutShortLabel="@string/shortcut_widgets_short"
        android:shortcutLongLabel="@string/shortcut_widgets_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="kardleaf://widgets" />
    </shortcut>
</shortcuts>
